# g4rt

./: .coderabbit.yaml  .gitignore  .gitmodules  CMakeLists copy.txt  CMakeLists.txt  Logger_README.md  README.md  TODO.md  book.toml  g4rt_env.yml
.github/workflows/: mdbook.yml
app/: CMakeLists copy.txt  CMakeLists.txt  CMakeLists_Original.txt
app/basic/: main.cc
app/bworld/: main.cc
app/bworld/src/: BWorldConstruction.cc  BWorldConstruction.hh  D3DTray.cc  D3DTray.hh
app/rtplan_converter/: main.cc
app/tld/: main.cc
app/tld/src/: TLD.cc  TLD.hh  TLDSD.cc  TLDSD.hh  TLDTray.cc  TLDTray.hh  TLDWorldConstruction.cc  TLDWorldConstruction.hh
core/: CMakeLists copy.txt  CMakeLists.txt  CMakeLists_original.txt
core/action/: ActionInitialization.cc  ActionInitialization.hh  ControlPoint.cc  ControlPoint.hh  EventAction.cc  EventAction.hh  PrimaryGenerationAction.cc  PrimaryGenerationAction.hh  RunAction.cc  RunAction.hh  SteppingAction.cc  SteppingAction.hh
core/analysis/: AnalysisFlags.cc  AnalysisFlags.hh  BeamAnalysis.cc  BeamAnalysis.hh  CsvRunAnalysis.cc  CsvRunAnalysis.hh  HDF5EventAnalysis.cc  HDF5EventAnalysis.hh  HDF5Manager.cc  HDF5Manager.hh  NTupleEventAnalisys.cc  NTupleEventAnalisys.hh  NTupleRunAnalysis.cc  NTupleRunAnalysis.hh  PrimariesAnalysis.cc  PrimariesAnalysis.hh  RunAnalysis.cc  RunAnalysis.hh  StepAnalysis.cc  StepAnalysis.hh  UserScoreWriter.cc  UserScoreWriter.hh
core/geometry/BeamMonitoring/: BeamMonitoring.cc  BeamMonitoring.hh  BeamMonitoringSD.cc  BeamMonitoringSD.hh
core/geometry/Linac/BeamCollimation/: BeamCollimation.cc  BeamCollimation.hh
core/geometry/Linac/BeamCollimation/MLC/: MlcHD120.cc  MlcHD120.hh  MlcMillennium.hh  MlcSimplified.cc  MlcSimplified.hh  VMlc.cc  VMlc.hh
core/geometry/Patient/: PatientTest.hh  PatientTrackInfo.cc  PatientTrackInfo.hh  PrimaryParticleInfo.cc  PrimaryParticleInfo.hh  VPatient.cc  VPatient.hh  VPatientSD.cc  VPatientSD.hh  VoxelHit.cc  VoxelHit.hh  VoxelHit_README.md
core/geometry/Patient/D3DDetector/: D3DCell.cc  D3DCell.hh  D3DCellSD.cc  D3DCellSD.hh  D3DDetector.cc  D3DDetector.hh
core/geometry/Patient/DBGeoBuilder/: GeometryBuilder.cc  GeometryBuilder.hh  GeometryDBReader.cc  GeometryDBReader.hh
core/geometry/Patient/DishCube/: DishCubePhantom.cc  DishCubePhantom.hh  DishCubePhantomSD.cc  DishCubePhantomSD.hh
core/geometry/Patient/Dose3D/: D3DCell.cc  D3DCellSD.cc  D3DDetector.cc  D3DMLayer.cc
core/geometry/Patient/GenericPhantom/: GenericPhantom.cc
core/geometry/Patient/IbaImRT/: IbaImRT.cc  IbaImRT.hh
core/geometry/Patient/ModularWaterPhantom/: ModularWaterPhantom.cc  ModularWaterPhantom.hh
core/geometry/Patient/SciLab/: SciSlicePhantom.cc  SciSlicePhantom.hh  SciSlicePhantomSD.cc  SciSlicePhantomSD.hh
core/geometry/Patient/WaterPhantom/: WaterPhantom.cc  WaterPhantom.hh  WaterPhantomSD.cc  WaterPhantomSD.hh
core/geometry/Patient/WaterPhantom/test/: WaterPhantomTest.cc  water_phantom_1x1x1_test.toml
core/geometry/PhaseSpace/: SavePhSp.cc  SavePhSp.hh  SavePhSpAnalysis.cc  SavePhSpAnalysis.hh  SavePhSpSD.cc  SavePhSpSD.hh
core/geometry/WorldConstruction/: LinacGeometry.cc  LinacGeometry.hh  MyGeometryTolerance.hh  PatientGeometry.cc  PatientGeometry.hh  SavePhSpConstruction.cc  SavePhSpConstruction.hh  WorldConstruction.cc  WorldConstruction.hh
core/physics/: PhysicsList.cc  PhysicsList.hh  StepMax.cc  StepMax.hh  physics_list_overview.md
core/physics/PrimaryGeneration/: IaeaPrimaryGenerator.cc  IaeaPrimaryGenerator.hh  IonPrimaryGenerator.cc  IonPrimaryGenerator.hh
core/services/: DicomSvc.cc  DicomSvc.hh  GeoSvc.cc  GeoSvc.hh  LogSvc.cpp  LogSvc.hh  LogSvc.hpp  LogSvc_README.md  MaterialsSvc.cc  MaterialsSvc.hh  RunSvc.cc  RunSvc.hh  Services.cc  Services.hh  logger.cpp  logger.hh  logger_basic2.cpp  logger_basic2.hh
core/services/log/: LogSvc.hh
core/utilities/: IO.cc  IO.hh  Types.cc  Types.hh
core/utilities/IGeant4/: FmtFormatters.hh  IPhysicalVolume.cc  IPhysicalVolume.hh  LogSession.cc  LogSession.hh  UIManager.cc  UIManager.hh
core/utilities/python/: dicom_ct.py  dicom_rtplan_mlc.py  dicom_total_test.py  mask_to_matrix.py
data/Geant4/: dose1dx_5x5.csv  dose1dy_5x5.csv  dose1dz_5x5.csv
data/gps/: gps_alpha_Am_241.mac  gps_gamma_70keV.mac  gps_gamma_Cd_109.mac  gps_gamma_Cs_137.mac  gps_gamma_Fe_55.mac  gps_x_ray_tube_20_kev_molybdenum.mac  gps_x_ray_tube_25_kev_molybdenum.mac  gps_x_ray_tube_30_kev_molybdenum.mac  gps_x_ray_tube_35_kev_molybdenum.mac  gps_x_ray_tube_40_kev_molybdenum.mac  gps_x_ray_tube_80_kev_tungsten.mac
data/plan/dicom/: d3df_static_4x4x4_srunet.dcm
data/tldGeometry/: concave.stl  convex.stl  drilled_hole.stl  one-hole.stl  standard.stl  testBoard.stl  three-hole.stl  two-hole.stl
executables/: CMakeLists.txt
jobs/: ct_cvs.toml
jobs/To_Identify/: tower.toml  tower_3x3x32_flsz_2x2.toml
jobs/db/: basic_iba_job.toml
jobs/examples/: 3MF_example.toml  Americium.toml  basic.toml  basic_gps.toml  d3df_example.toml  profile_wp_3mf_y_0mm.toml  profile_wp_3mf_y_4mm.toml  stl_tower_example_job.toml
jobs/job_builder/: generate_jobs_v2.py
jobs/singleScintilator/: Americium.toml  Ameryk.toml  Cadmium.toml  Caesium.toml  Cez.toml  Iron.toml  Kadm.toml
jobs/srunet3d/: asf_fsf_job.toml  mlsr_4x4x4_10x10x10_flsz_20x20mm_rot_phsp.toml  mlsr_4x4x4_10x10x10_flsz_25x25mm_top0.0_gpsFunnyPlastic.toml  srunet3d_2x2x2_10x10x10.toml  srunet3d_4x4x2_10x10x10.toml
jobs/srunet3d/production/: srunet3d_4x4x2_10x10x10_beam0.toml  srunet3d_4x4x2_10x10x10_beam0_modified.toml  srunet3d_4x4x2_10x10x10_beam1.toml  srunet3d_4x4x2_10x10x10_beam2.toml  srunet3d_4x4x2_10x10x10_beam3.toml  srunet3d_4x4x2_10x10x10_beam4.toml
jobs/srunet3d/testing/: fsf_inpact_test.toml  tps_test.toml
jobs/testbeam/: tower.toml  tower_3x3x32_flsz_2x2.toml
jobs/testbeam/16112024/: pdd.toml  pdd_wp_simpified.toml  profile.toml  (+1 more)
jobs/tld/: complicated.toml  voxel_plotter.py
jobs/water_phantom/: water_phantom.toml
jobs/web/: web_job.toml
scripts/: drawSimpleScoring.C  inspect_and_sum.py  merge_hdf5.py  testGeo.C
scripts/Plotters/: vtk_plotter.py
(+69 files in other folders)
